BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/CIB_Insider_List__c.object-meta.xml
<CustomObject>
    <label>Insider List</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Insider List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insider List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>