BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Codice_fiscale__c.field-meta.xml
<CustomField>
    <fullName>Codice_fiscale__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.Codice_fiscale__c, Insider_List_Fornitori__r.Codice_fiscale__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice fiscale</label>
    <type>Text</type>
</CustomField>