BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Cognome_di_nascita__c.field-meta.xml
<CustomField>
    <fullName>Cognome_di_nascita__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.Cognome_di_nascita_se_diverso__c, Insider_List_Fornitori__r.Cognome_di_nascita__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cognome di nascita (se diverso)</label>
    <type>Text</type>
</CustomField>