BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Data_di_nascita__c.field-meta.xml
<CustomField>
    <fullName>Data_di_nascita__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.Data_di_nascita__c, Insider_List_Fornitori__r.Data_di_nascita__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data di nascita</label>
    <type>Date</type>
</CustomField>