BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Data_ora_di_accesso_all_informazione__c.field-meta.xml
<CustomField>
    <fullName>Data_ora_di_accesso_all_informazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data-ora di accesso all’informazione</label>
    <type>DateTime</type>
</CustomField>