BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Indirizzo_di_residenza__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_di_residenza__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.Indirizzo_di_residenza__c, Insider_List_Fornitori__r.Indirizzo_di_residenza__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Via, civico, CAP,Comune, Provincia, Stato)</inlineHelpText>
    <label>Indirizzo di residenza</label>
    <type>Text</type>
</CustomField>