BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Indirizzo_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_e_mail__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.Email, Insider_List_Fornitori__r.Indirizzo_e_mail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirizzo e-mail</label>
    <type>Text</type>
</CustomField>