BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Insider_List_Fornitori__c.field-meta.xml
<CustomField>
    <fullName>Insider_List_Fornitori__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insider List Fornitori</label>
    <referenceTo>CIB_Insider_List_Fornitori__c</referenceTo>
    <relationshipLabel>Insider List</relationshipLabel>
    <relationshipName>Insider_List</relationshipName>
    <type>Lookup</type>
</CustomField>