BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Luogo_di_nascita__c.field-meta.xml
<CustomField>
    <fullName>Luogo_di_nascita__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.Luogo_di_nascita__c, Insider_List_Fornitori__r.Luogo_di_nascita__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Luogo di nascita</label>
    <type>Text</type>
</CustomField>