BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Nome_e_cognome__c.field-meta.xml
<CustomField>
    <fullName>Nome_e_cognome__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.FirstName + &apos; &apos; +  Utente__r.LastName, Insider_List_Fornitori__r.Nome_e_cognome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome e cognome</label>
    <type>Text</type>
</CustomField>