BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Numeri_di_telefono_personali__c.field-meta.xml
<CustomField>
    <fullName>Numeri_di_telefono_personali__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.Numeri_di_telefono_personali__c, Insider_List_Fornitori__r.Numeri_di_telefono_personali__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numeri di telefono personali</label>
    <type>Text</type>
</CustomField>