BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Insider Lists</relationshipLabel>
    <relationshipName>Insider_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>