BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Societa__c.field-meta.xml
<CustomField>
    <fullName>Societa__c</fullName>
    <formula>IF(RecordType.Name = &apos;Utente&apos;,&apos;BPER&apos;,Insider_List_Fornitori__r.Societa__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Società</label>
    <type>Text</type>
</CustomField>