BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Titolo__c.field-meta.xml
<CustomField>
    <fullName>Titolo__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.Title, Insider_List_Fornitori__r.Titolo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Titolo</label>
    <type>Text</type>
</CustomField>