BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Unita_Organizzativa__c.field-meta.xml
<CustomField>
    <fullName>Unita_Organizzativa__c</fullName>
    <formula>Utente__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unità Organizzativa</label>
    <type>Text</type>
</CustomField>