BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Unita_organizzativa_Ruolo__c.field-meta.xml
<CustomField>
    <fullName>Unita_organizzativa_Ruolo__c</fullName>
    <formula>IF(Utente__c != null,Utente__r.UserRole.Name, Insider_List_Fornitori__r.Unita_organizzativa_Ruolo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unità organizzativa/Ruolo</label>
    <type>Text</type>
</CustomField>