BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <formula>IF(ISNULL(Utente__r.FederationIdentifier),&apos;N.D.&apos;,&apos;U&apos;+Utente__r.FederationIdentifier)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID</label>
    <type>Text</type>
</CustomField>