BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/fields/Utente__c.field-meta.xml
<CustomField>
    <fullName>Utente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.CRM_PermissionSet__c</field>
            <operation>contains</operation>
            <value>CIB</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Insider_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>