BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/recordTypes/Fornitore.recordType-meta.xml
<RecordType>
    <fullName>Fornitore</fullName>
    <active>true</active>
    <label>Fornitore</label>
</RecordType>