BPER/DEVF/force-app/main/default/objects/CIB_Insider_List__c/recordTypes/Utente.recordType-meta.xml
<RecordType>
    <fullName>Utente</fullName>
    <active>true</active>
    <label>Utente</label>
</RecordType>